--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Ziyad Benomar
+description: Hello ! I am a student in the third year of the engineering degree at the Ecole polytechnique, majoring in computer science and applied mathematics. 
